# GConverter

./: .gitignore  CMakeLists.txt  README.md
geometries/: dart.stl
include/: conversor.hpp  gconversor.hpp  obj.hpp  stl.hpp  utils.hpp
src/: conversor.cpp  gconversor.cpp  obj.cpp  stl.cpp
test/: CMakeLists.txt  test_conversor.cpp  test_conversor_1.cpp  test_obj_calc_centroid.cpp  test_obj_read_geo.cpp  test_obj_rotate.cpp  test_obj_scale.cpp  test_obj_translate.cpp  test_rotate.cpp  test_stl_calc_centroid.cpp  test_stl_calc_surface.cpp  test_stl_calc_volume.cpp  test_stl_is_point_inside.cpp  test_stl_tri.cpp  test_stl_triangle_ascii.cpp  test_stl_triangle_binary.cpp  test_stl_triangle_binary_2.cpp  test_translate.cpp
